--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,10 @@
         {
             "name": "hosam",
             "email": "hosammetman@gmail.com"
+        },
+        {
+            "name": "Omar",
+            "email": "omarelnaghy53@gmail.com"
         }
     ],
     "extra": {
