--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,6 @@
         {
             "name": "hosam",
             "email": "hosammetman@gmail.com"
-        },
-        {
-            "name": "Omar",
-            "email": "omarelnaghy53@gmail.com"
         }
     ],
     "extra": {
@@ -25,7 +21,5 @@
             ]
         }
     },
-    "require": {
-        "hosam/product-crud": "dev-master"
-    }
+    "require": {}
 }
